--- a/views/store_info.ejs
+++ b/views/store_info.ejs
@@ -26,7 +26,7 @@
     <li>Tel： 02 6631 6666</li>
 </ul>
 
-<img src="/img/born05.jpg" class="img"> 
+<img src="/img/born05.jpg" class="img" width="700px"> 
 
 
 <%- include("parts/scripts") %>
