--- a/views/main.ejs
+++ b/views/main.ejs
@@ -10,10 +10,10 @@
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <style>
-        h1 {
+        h4 {
             text-align: center;
             font-family: 'Architects Daughter', cursive;
-            margin: 20px;
+            margin: 15px;
             padding: 20px;
         }
 
@@ -38,14 +38,14 @@
 
         .main01 {
             position: fixed;
-            width: 600px;
+            width: 450px;
             left: 0;
             bottom: 0;
         }
 
         .main02 {
             position: fixed;
-            width: 600px;
+            width: 450px;
             right: 0;
             top: 0;
         }
@@ -55,31 +55,31 @@
 <body>
 
     <article>
-        <h1>
+        <h4>
             <a href="/lookbook">LOOKBOOK <i class="fa fa-street-view" aria-hidden="true"></i></a>
-        </h1>
-        <h1>
+        </h4>
+        <h4>
             <a href="/onlineshop">ONLINESTORE <i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
-        </h1>
-        <h1>
+        </h4>
+        <h4>
             <a href="https://instagram.com/bornrichworldwide?igshid=110t3y8muusdw">INSTAGRAM <i class="fab fa-instagram"
                     aria-hidden="true"></i></a>
-        </h1>
-        <h1>
+        </h4>
+        <h4>
             <a href="mailto:123@iii.org.tw">CONTACT US <i class="fa fa-paper-plane" aria-hidden="true"></i></a>
-        </h1>
-        <h1>
+        </h4>
+        <h4>
             <a href="/store_info">STORE INFO <i class="fa fa-map-marker-alt" aria-hidden="true"></i></a>
-        </h1>
-        <h1>
+        </h4>
+        <h4>
             <a href="/login">LOGIN <i class="fa fa-user-circle" aria-hidden="true"></i></a>
-        </h1>
+        </h4>
     </article>
     <img src="/img/main01.jpg" class="main01">
     <img src="/img/main02.jpg" class="main02">
 
 
-    </div><br><br><br><br><br>
+    </div><br><br><br>
     <p>Copyright &copy; 2020 BORNRICH CO.,LTD. All rights reserved.</p>
 
 </body>
